<?xml version="1.0"?>
<package>
  <name>roah_rsbb_comm_ros</name>
  <version>0.0.0</version>
  <description>RoCKIn@Home Referee, Scoring and Benchmarking Box communication from ROS</description>

  <maintainer email="jreis@isr.ist.utl.pt">João Reis</maintainer>
  <author email="jreis@isr.ist.utl.pt">João Reis</author>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
